# kritor_agent

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: check.yml  docker-publish.yml  release.yml
kritor/: Cargo.toml  build.rs
kritor/src/: lib.rs
kritor_agent/: Cargo.toml  kritor_agent.example.toml
kritor_agent/src/agents/: mod.rs
kritor_agent/src/agents/satori/: client.rs  mod.rs  schema.rs
kritor_agent/src/agents/satori/message/: element.rs  mod.rs  parser.rs
