[package]
name = "kritor_agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kritor_agent_server"
path = "src/bin/server/main.rs"

[dependencies]
kritor = { path = "../kritor", features = ["server","generate_default_stubs"] }
prost = { workspace = true }
tonic = { workspace = true }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
serde_repr = "0.1.19"
url = "2.5.0"
tonic-reflection = "0.11.0"
toml = "0.8.12"
clap = "4.5.4"
anyhow = "1.0.82"
futures-util = "0.3.30"
tokio-tungstenite = "0.21.0"
tokio-stream = { version = "0.1.15", features = ["sync"] }
